--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="sound">
-        <img src="img/SOUND_ON.png" alt="" id="sound">
+        <img src="SOUND_ON.png" alt="" id="sound">
     </div>
 
     <div id="gameover">
-        <img src="img/youwon.png" alt="" id="youwon">
-        <img src="img/gameover.png" alt="" id="youlose">
+        <img src="youwon.png" alt="" id="youwon">
+        <img src="gameover.png" alt="" id="youlose">
         <div id="restart">Play Again!</div>
     </div>
    
